Bug: PRD Reviewer: Lynn Comment: fixed all the css style issues in the admin pages (jumping buttons, spacing, consistent button hovers, etc).

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtReports.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtReports.css
@@ -57,19 +57,23 @@
 		.vibe-reportCompositeBase-runButton    {margin-right:3px; margin-top: 20px; margin-left: 0.5em; margin-bottom: 10px;}
 		.vibe-reportCompositeBase-widgetsPanel {display: block; margin-top: 10px; -moz-border-radius: 3px; border-radius: 3px; -webkit-border-radius: 3px; border: 1px solid #cccccc; padding: 5px; background-color: #ededed;}
 		.vibe-reportCompositeBase-buttonBase   {
-			color:#fff;
-		 	font-size: 11px;
+			color:#1f1f1f;
 		    font-family: Arial, sans-serif !important;
-			background: #949494 none repeat scroll 0 0;
+			font-size: 12px;
+			font-weight: normal !important;
+			text-decoration:none;	
+			cursor: pointer;
+			white-space: nowrap;
 			padding: 2px 10px;
-			text-decoration:none;
-		  	cursor: pointer;
-		  	white-space: nowrap;
-			border: 0px;
+		    text-align: center !important;
+	   		border: 1px solid #B8B8B8;
 			border-radius: 15px;
 			-moz-border-radius: 15px;
 			-webkit-border-radius: 15px;
-		    text-align: center !important;
+			background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#E0E0E0));
+			background: -moz-linear-gradient(center top , #ffffff, #E0E0E0) repeat scroll 0 0;
+			background: linear-gradient(center top , #ffffff, #E0E0E0) repeat scroll 0 0;
+			background-color: transparent;
 		}
 	/* End:  Base report composite styles. */
 	
